--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #141212;
+    background-color: #81ecec;
     font-family: inherit;
     margin: 0;
 }
@@ -37,4 +37,27 @@ h1{
 div{
     display: flex;
     flex-wrap: wrap;
+}
+.movie{
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 4px rgba(0,0,0,0.2);
+    overflow: hidden;
+    position: relative;
+    margin: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 270px;
+}
+.movie img{
+    width: 100%;
+}
+.movie.info {
+    color: #eee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
 }
