--- a/style.css
+++ b/style.css
@@ -3,22 +3,24 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #81ecec;
+    background-color: #FFFFFF;
     font-family: inherit;
-    margin: 0;
+    margin:0;
+    padding: 0;
+    overflow-y:scroll;
 }
 header{
     display: flex;
-    background-color: #01b4e4;
+    background-color: #046D9D;
 }
 h1{
     align-self: center;
-    margin-left: 28rem;
-    color: #fff;
+    margin-left: 2rem;
+    color: #FFFFFF;
 }
 .search{
     margin: 3rem;
-    margin-left: 12rem;
+    margin-left: 1rem;
     background-color: transparent;
     border: 2px solid #e9e9ec;
     border-radius: 50px;
@@ -28,7 +30,7 @@ h1{
     padding: 0.5rem 1rem;
 }
 .search::placeholder{
-    color: aqua;
+    color: #FFFFFF;
 }
 .search:focus{
     background-color: #373b69;
@@ -39,7 +41,7 @@ div{
     flex-wrap: wrap;
 }
 .movie{
-    background-color: #f5f5f5;
+    background-color: #2D2E34;
     border-radius: 10px;
     box-shadow: 0 4px rgba(0,0,0,0.2);
     overflow: hidden;
@@ -52,7 +54,7 @@ div{
 .movie img{
     width: 100%;
 }
-.movie.info {
+.movie-info {
     color: #eee;
     display: flex;
     flex-direction: column;
@@ -60,4 +62,53 @@ div{
     justify-content: center;
     padding: 0.5rem 1rem 1rem;
     letter-spacing: 0.5px;
+}
+.movie-info h3{
+    margin: 0;
+}
+.movie-info span{
+    background-color: #22254b;
+    border-radius: 3px;
+    font-weight: bold;
+    padding: 0.25rem 0.8rem;
+}
+.movie-info span.green{
+    color: rgba(39,189,39);
+}
+.movie-info span.orange{
+    color:orange;
+}
+.movie-info span.red{
+    color: rgba(189,42,42);
+}
+.overview{
+    background-color: #fff;
+    padding: 2rem;
+    position: absolute;
+    max-height: 100%;
+    overflow: auto;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    transform: translateY(101%);
+    transition: transform 0.3s ease-in;
+}
+.overview h3{
+    margin-top: 0;
+}
+.movie:hover.overview{
+    transform:translateY(0);
+}
+.movie:not(:hover).overview{
+    transform: translateY(101%)!important;
+}
+footer{
+    text-align: center;
+    background-color: #046D9D;
+    color: #ffffff;
+    font-size: 15px;
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+
 }
