--- a/style.css
+++ b/style.css
@@ -126,6 +126,32 @@ div {
 .overview h3 {
     margin-top: 0;
 }
+.trailer-button{
+    background-color: #046D9D;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    font-family: inherit;
+    font-size: 0.9rem;
+    cursor: pointer;
+}
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 1000;
+}
+.modal-content{
+    background-color:#fff;
+    border-radius: 10px;
+}
 
 footer {
     text-align: center;
